using gpt2 encoder for soutpark, adding transformer sizing, drawing 2 samples

--- a/transformer_sizing.ipynb
+++ b/transformer_sizing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,42 +32,93 @@
     "#     'gpt2-xl':      dict(n_layer=48, n_head=25, n_embd=1600), # 1558M params\n",
     "# }[model_type]\n",
     "\n",
+    "# CrappyGPT char (For CPU)\n",
+    "# block_size = 16\n",
+    "# vocab_size = 327\n",
+    "# n_embd = 192\n",
+    "# n_head = 6\n",
+    "# n_layer = 6\n",
+    "\n",
+    "# CrappyGPT 50k (not yet included in reseach)\n",
+    "# block_size = 16\n",
+    "# vocab_size = 50257 # (GPT2 tokenizer) \n",
+    "# n_embd = 192\n",
+    "# n_head = 6\n",
+    "# n_layer = 6\n",
+    "\n",
+    "# CrappyGPT 200k\n",
+    "# block_size = 16\n",
+    "# vocab_size = 200000 # (GPT4o tokenizer)\n",
+    "# n_embd = 192\n",
+    "# n_head = 6\n",
+    "# n_layer = 6\n",
+    "\n",
+    "# # nanoGPT char (For CPU)\n",
+    "# block_size = 16\n",
+    "# vocab_size = 327\n",
+    "# n_embd = 384\n",
+    "# n_head = 6\n",
+    "# n_layer = 6\n",
+    "\n",
+    "# # nanoGPT 50k \n",
+    "# block_size = 256\n",
+    "# vocab_size = 50257 # (GPT2 tokenizer)\n",
+    "# n_embd = 384\n",
+    "# n_head = 6\n",
+    "# n_layer = 6\n",
+    "\n",
+    "# nanoGPT 200k \n",
+    "# block_size = 256\n",
+    "# vocab_size = 200000 # (GPT4 tokenizer)\n",
+    "# n_embd = 384\n",
+    "# n_head = 6\n",
+    "# n_layer = 6\n",
+    "\n",
+    "# nanoGPT 200k \n",
     "block_size = 1024\n",
-    "vocab_size = 50257\n",
-    "n_layer = 12\n",
-    "n_head = 12\n",
-    "n_embd = 768\n",
+    "vocab_size = 200000 # (GPT4 tokenizer)\n",
+    "n_embd = 384\n",
+    "n_head = 6\n",
+    "n_layer = 6\n",
+    "\n",
+    "# GPT2 50k (GPT4 tokenizer)\n",
+    "# block_size = 1024\n",
+    "# vocab_size = 50000\n",
+    "# n_embd = 768\n",
+    "# n_head = 12\n",
+    "# n_layer = 12\n",
+    "\n",
     "bias = False\n",
     "assert not bias, \"this notebook assumes bias=False just for simplicity\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we see: 124337664, expected: 124337664, match: True\n",
+      "we see: 87520128, expected: 124337664, match: False\n",
       "name                 params     ratio (%) \n",
-      "emebedding/position      786432     0.6325\n",
-      "embedding/token        38597376    31.0424\n",
-      "embedding              39383808    31.6749\n",
-      "attention/ln                768     0.0006\n",
-      "attention/kqv           1769472     1.4231\n",
-      "attention/proj           589824     0.4744\n",
-      "attention               2360064     1.8981\n",
-      "mlp/ln                      768     0.0006\n",
-      "mlp/ffw                 2359296     1.8975\n",
-      "mlp/proj                2359296     1.8975\n",
-      "mlp                     4719360     3.7956\n",
-      "block                   7079424     5.6937\n",
-      "transformer            84953088    68.3245\n",
-      "ln_f                        768     0.0006\n",
-      "dense                         0     0.0000\n",
-      "total                 124337664   100.0000\n"
+      "emebedding/position  9.83e+04     0.1123\n",
+      "embedding/token      7.68e+07    87.7512\n",
+      "embedding            7.69e+07    87.8636\n",
+      "attention/ln         3.84e+02     0.0004\n",
+      "attention/kqv        4.42e+05     0.5054\n",
+      "attention/proj       1.47e+05     0.1685\n",
+      "attention            5.90e+05     0.6744\n",
+      "mlp/ln               3.84e+02     0.0004\n",
+      "mlp/ffw              5.90e+05     0.6739\n",
+      "mlp/proj             5.90e+05     0.6739\n",
+      "mlp                  1.18e+06     1.3483\n",
+      "block                1.77e+06     2.0227\n",
+      "transformer          1.06e+07    12.1360\n",
+      "ln_f                 3.84e+02     0.0004\n",
+      "dense                0.00e+00     0.0000\n",
+      "total                8.75e+07   100.0000\n"
      ]
     }
    ],
@@ -112,22 +163,22 @@
     "# create a header\n",
     "print(f\"{'name':20s} {'params':10s} {'ratio (%)':10s}\")\n",
     "for k,v in p.items():\n",
-    "    print(f\"{k:20s} {v:10d} {v/params_total*100:10.4f}\")\n",
+    "    print(f\"{k:20s} {v:.2e} {v/params_total*100:10.4f}\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "est checkpoint size: 1.49 GB\n",
+      "est checkpoint size: 0.13 GB\n",
       "measured with wc -c ckpt.pt: 1542470366\n",
-      "fluff ratio: 103.38%\n"
+      "fluff ratio: 1195.32%\n"
      ]
     }
    ],
@@ -152,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "memory ratio taken up just for parameters: 3.73%\n"
+      "memory ratio taken up just for parameters: 0.08%\n"
      ]
     }
    ],
@@ -186,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,20 +245,20 @@
      "output_type": "stream",
      "text": [
       "name                 flops          ratio (%) \n",
-      "attention/kqv            3623878656     1.2426\n",
-      "attention/scores         1610612736     0.5522\n",
-      "attention/reduce         1610612736     0.5522\n",
-      "attention/proj           1207959552     0.4142\n",
-      "attention                8053063680     2.7612\n",
-      "mlp/ffw1                 4831838208     1.6567\n",
-      "mlp/ffw2                 4831838208     1.6567\n",
-      "mlp                      9663676416     3.3135\n",
-      "block                   17716740096     6.0747\n",
-      "transformer            212600881152    72.8963\n",
-      "dense                   79047426048    27.1037\n",
-      "forward_total          291648307200   100.0000\n",
-      "backward_total         583296614400   200.0000\n",
-      "total                  874944921600   300.0000\n"
+      "attention/kqv               3538944     4.0159\n",
+      "attention/scores              98304     0.1116\n",
+      "attention/reduce              98304     0.1116\n",
+      "attention/proj              1179648     1.3386\n",
+      "attention                   4915200     5.5776\n",
+      "mlp/ffw1                    4718592     5.3545\n",
+      "mlp/ffw2                    4718592     5.3545\n",
+      "mlp                         9437184    10.7091\n",
+      "block                      14352384    16.2867\n",
+      "transformer                86114304    97.7201\n",
+      "dense                       2009088     2.2799\n",
+      "forward_total              88123392   100.0000\n",
+      "backward_total            176246784   200.0000\n",
+      "total                     264370176   300.0000\n"
      ]
     }
    ],
@@ -260,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "palm_flops: 875062886400, flops: 874944921600, ratio: 1.0001\n"
+      "palm_flops: 264609792, flops: 264370176, ratio: 1.0009\n"
      ]
     }
    ],
@@ -297,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fraction of A100 used: 37.14%\n"
+      "fraction of A100 used: 0.01%\n"
      ]
     }
    ],
@@ -332,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time needed to train the model: 3.46 days\n"
+      "time needed to train the model: 0.08 days\n"
      ]
     }
    ],
@@ -374,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -388,14 +439,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.0"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "7f5833218766b48e6e35e4452ee875aac0e2188d05bbe5298f2c62b79f08b222"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
