2 samples and spelling correction

--- a/transformer_sizing.ipynb
+++ b/transformer_sizing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,31 +94,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we see: 87520128, expected: 124337664, match: False\n",
+      "we see: 87815040, expected: 124337664, match: False\n",
       "name                 params     ratio (%) \n",
-      "emebedding/position  9.83e+04     0.1123\n",
-      "embedding/token      7.68e+07    87.7512\n",
-      "embedding            7.69e+07    87.8636\n",
+      "emebedding/position  3.93e+05     0.4478\n",
+      "embedding/token      7.68e+07    87.4565\n",
+      "embedding            7.72e+07    87.9043\n",
       "attention/ln         3.84e+02     0.0004\n",
-      "attention/kqv        4.42e+05     0.5054\n",
-      "attention/proj       1.47e+05     0.1685\n",
-      "attention            5.90e+05     0.6744\n",
+      "attention/kqv        4.42e+05     0.5037\n",
+      "attention/proj       1.47e+05     0.1679\n",
+      "attention            5.90e+05     0.6721\n",
       "mlp/ln               3.84e+02     0.0004\n",
-      "mlp/ffw              5.90e+05     0.6739\n",
-      "mlp/proj             5.90e+05     0.6739\n",
-      "mlp                  1.18e+06     1.3483\n",
-      "block                1.77e+06     2.0227\n",
-      "transformer          1.06e+07    12.1360\n",
+      "mlp/ffw              5.90e+05     0.6717\n",
+      "mlp/proj             5.90e+05     0.6717\n",
+      "mlp                  1.18e+06     1.3438\n",
+      "block                1.77e+06     2.0159\n",
+      "transformer          1.06e+07    12.0952\n",
       "ln_f                 3.84e+02     0.0004\n",
       "dense                0.00e+00     0.0000\n",
-      "total                8.75e+07   100.0000\n"
+      "total                8.78e+07   100.0000\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "    out = OrderedDict()\n",
     "\n",
     "    # token and position embeddings\n",
-    "    out['emebedding/position'] = n_embd * block_size\n",
+    "    out['embedding/position'] = n_embd * block_size\n",
     "    out['embedding/token'] = n_embd * vocab_size\n",
     "    out['embedding'] = out['emebedding/position'] + out['embedding/token']\n",
     "\n",
